[project]
name = "langgraph-hil-human-in-the-loop"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeff Taylor",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.2.70,<0.3.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pygraphviz (>=1.14,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
